--- a/CH 3/taco-cloud/src/main/resources/templates/orderForm.html
+++ b/CH 3/taco-cloud/src/main/resources/templates/orderForm.html
@@ -16,6 +16,10 @@
     <img th:src="@{/images/Aimyon.webp}"/>
     <a th:href="@{/design}" id = "another">Design another taco</a><br/>
 
+    <ul>
+        <li th:each="taco : ${order.tacos}">
+        <span th:text="${taco.name}">taco name</span><li/>
+    </ul>
     <div th:if="${#fields.hasErrors()}">
         <span class="validationError">
             Please correct the problems below and resubmit.
